[package]
name = "gh-pr-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
octocrab = "0.49"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
textwrap = "0.16"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
unicode-width = "0.2"
tempfile = "3"
open = "5"
pulldown-cmark = "0.12"
reqwest = { version = "0.12", features = ["blocking"] }
